<resources>
    <string name="app_name">Mentoria</string>
    <string name="title_activity_main">Atividade Principal</string>
    <string name="title_activity_session">Atividade de Sessão</string>
    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
    <string name="nav_header_title">Aplicativo de Mentoria</string>
    <string name="nav_header_subtitle">exemplo@dominio.com</string>
    <string name="nav_header_desc">Cabeçalho de Navegação</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_home">Início</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Apresentação de Slides</string>
    <string name="remove">Remover</string>
    <string name="cancel">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="session_date">Data da Avaliação</string>
    <string name="start">Hora de Início</string>
    <string name="end_time">Hora de Término</string>
    <string name="provincia">Província</string>
    <string name="distrito">Distrito</string>
    <string name="hf">Unidade de Saúde</string>
    <string name="cabinet">Gabinete</string>
    <string name="time_of_day">Horário</string>
    <string name="door">Porta</string>
    <string name="title_activity_login">Atividade de Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou Registrar-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="invalid_username">Nome de usuário inválido</string>
    <string name="invalid_password">A senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">Falha na autenticação</string>
    <string name="login">Entrar</string>
    <string name="tutoreds_list">Lista de Mentorandos</string>
    <string name="new_tutored">Novo Mentorando</string>
    <string name="record_successfully_saved">Registro salvo com sucesso</string>
    <string name="record_successfully_removed">Registro removido com sucesso</string>
    <string name="submit">Salvar</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="telephone">Telefone</string>
    <string name="career">Carreira</string>
    <string name="position">Posição</string>
    <string name="vinculo_laboral">Vínculo laboral</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="phone_number_invalid">Número de telefone inválido</string>
    <string name="email_invalid">Email inválido</string>
    <string name="email">Email</string>
    <string name="professional_category">Categoria Profissional</string>
    <string name="nuit">Número de Contribuinte</string>
    <string name="local">Localização</string>
    <string name="session_closure">Fecho da Sessão</string>
    <string name="back">Voltar</string>
    <string name="session_submission_state">Período de Submissão</string>
    <string name="lista_de_mentorandos_seleccionados">Lista de Mentorandos Selecionados</string>
    <string name="nome_nuit">Nome/Número de Contribuinte</string>
    <string name="iniciar_ronda_mentorados">Iniciar Ronda - Mentorandos</string>
    <string name="save_and_continue">Salvar e Continuar</string>
    <string name="print">Imprimir</string>
    <string name="server_unavailable">Não foi possível conectar ao servidor. Verifique sua conexão com a Internet ou entre em contato com o administrador.</string>
    <string name="sess_es_de_mentoria">Sessões de Mentoria</string>
    <string name="fecho_da_sess_o">Fecho da Sessão</string>
    <string name="sync_now">Sincronizar Dados Agora</string>
    <string name="session_sync_time_key">Chave de Tempo de Sincronização da Sessão</string>
    <string name="metadata_sync_time_key">Chave de Tempo de Sincronização de Metadados</string>
    <string name="no_record_found">Nenhum registro encontrado.</string>
    <string name="download_success">Download do recurso concluído com sucesso.</string>
    <string name="download_failed">O download falhou devido a um erro inesperado.</string>
    <string name="permission_error">Não foi possível fazer o download do recurso devido à falta de permissão de armazenamento local.</string>
    <string name="max_mentees_reached">O número máximo de mentorandos é 8</string>
    <string name="start_date_required">A data de início da ronda é obrigatória.</string>
    <string name="health_facility_required">A unidade de saúde é obrigatória</string>
    <string name="mentees_required">Você deve selecionar mentorandos para compor a ronda.</string>
    <string name="permission_print_error">Não foi possível imprimir o relatório devido à falta de permissão</string>
    <string name="processando">Processando...</string>
    <string name="no_resource_selected_error">Nenhum recurso recomendado foi selecionado.</string>
    <string name="session_resources_update_error">Erro ao tentar salvar os recursos recomendados.</string>
    <string name="no_doors_available">Nenhum registro de porta encontrado.</string>
    <string name="no_categories_available">Nenhuma secção encontrada.</string>
    <string name="no_forms_available">Nenhuma tabela de competências encontrada.</string>
    <string name="interno">Interno</string>
    <string name="externo">Externo</string>
    <string name="dialog_title">Tempo de Sessão Expirado</string>
    <string name="dialog_message">Você será desconectado em %1$d segundos devido à inatividade. Deseja estender sua sessão?</string>
    <string name="extend_session">Estender Sessão</string>
    <string name="logout">Sair</string>
    <string name="invalid_sync_interval">Intervalo de sincronização inválido.</string>
    <string name="invalid_auto_logout_time">Tempo de logout automático inválido.</string>
    <string name="syncing_data_please_wait">Sincronizando dados, por favor aguarde...</string>
    <string name="sync_completed_successfully">Sincronização concluída com sucesso.</string>
    <string name="sync_failed">Falha na sincronização.</string>
    <string name="invalid_sync_interval_range">Insira um intervalo de sincronização entre %d e %d minutos.</string>
    <string name="invalid_auto_logout_time_range">Insira um tempo de logout automático entre %d e %d minutos.</string>
    <string name="invalid_sync_interval_range_hours">Insira um intervalo de sincronização entre %d e %d horas.</string>
    <string name="auto_logout_time_validated_successfully">Configuração aplicada com sucesso</string>
    <string name="no_previous_category">Nenhuma categoria anterior para exibir.</string>
    <string name="missising_answers">Você tem uma ou mais Competências sem resposta indicada.</string>
    <string name="all_competencies_answered">Você terminou de preencher todas as Competências desta avaliação. Confirma finalizar?</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="no_table_selected">Por favor, selecione a tabela de competências.</string>
    <string name="no_mentee_selected">Por favor, selecione o mentorando.</string>
    <string name="mentorship_start_date_error">A data de início não pode ser anterior à data de início da sessão.</string>
    <string name="mentorship_start_date_empty">A data de início não pode estar vazia.</string>
    <string name="mentorship_start_date_future">A data de início não pode estar no futuro.</string>
    <string name="empty_sector_error">O setor não pode estar vazio.</string>
    <string name="empty_door_error">A porta não pode estar vazia.</string>
    <string name="empty_evaluation_type_error">O tipo de avaliação não pode estar vazio.</string>
    <string name="error_saving_evaluation">Erro ao salvar a avaliação de mentoria.</string>
    <string name="error_max_consultation">Você não pode criar mais avaliações de consulta nesta sessão; o máximo permitido é %1$d</string>
    <string name="error_max_file">Você não pode criar mais avaliações de ficha nesta sessão; o máximo permitido é %1$d</string>
    <string name="confirm_save_changes">Deseja salvar as alterações desta avaliação?</string>
    <string name="error_max_evaluations">Você não pode criar mais de 4 avaliações para o mentorando(a) %1$s</string>
    <string name="error_delete_completed">Você não pode apagar uma avaliação finalizada.</string>
    <string name="confirm_delete_evaluation">Deseja excluir a avaliação?</string>
    <string name="user_inactive">O usuário está inativo. Entre em contato com o administrador.</string>
    <string name="invalid_user_or_password">Usuário ou senha inválidos</string>
    <string name="ronda_edit_error_msg">Não é possível editar uma ronda com sessões registradas.</string>
    <string name="ronda_delete_error_msg">Não é possível excluir uma ronda com sessões registradas.</string>
    <string name="ronda_delete_confirmation">Você realmente deseja excluir a ronda?</string>
    <string name="ronda_delete_success">Ronda removida com sucesso.</string>
    <string name="ronda_print_success">Resumo impresso com sucesso. Encontre o documento no diretório de downloads.</string>
    <string name="ronda_print_failure">Não foi possível imprimir o documento.</string>
    <string name="ronda_session_error">Erro ao verificar sessões da ronda.</string>
    <string name="ronda_load_error">Erro ao carregar dados da ronda.</string>
    <string name="ronda_zero">Ronda Zero</string>
    <string name="ronda_mentoria">Ronda de Mentoria</string>
    <string name="ronda_save_error">Falha ao salvar a ronda.</string>
    <string name="mentee_already_in_list">O mentorando selecionado já existe na lista!</string>
    <string name="mentee_field_empty">O campo de mentorando está vazio. Selecione um mentorando para adicionar à lista.</string>
    <string name="health_facilities_load_error">Falha ao carregar as unidades de saúde.</string>
    <string name="districts_load_error">Falha ao carregar os distritos.</string>
    <string name="mentees_load_error">Falha ao carregar os mentorandos.</string>
    <string name="session_end_date_before_start">A data de término da sessão não pode ser anterior à data de início.</string>
    <string name="session_end_date_before_last_mentorship">A data de término da sessão não pode ser anterior à data final da última avaliação.</string>
    <string name="session_update_error">Erro ao tentar atualizar a sessão.</string>
    <string name="session_delete_error">Erro ao tentar excluir a sessão.</string>
    <string name="cannot_edit_completed_session">Não é possível editar uma sessão finalizada.</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="remember_me">Lembrar-me</string>
    <string name="authenticating">Autenticando, aguarde por favor...</string>
    <string name="alert_title">Alerta!</string>
    <string name="confirm_message">Você confirma o término da Avaliação?</string>
    <string name="end_time_hint">Hora de Término</string>
    <string name="rounds">Rondas/Ciclos</string>
    <string name="zero_sessions">Sessões Zero</string>
    <string name="mentees">Mentorandos</string>
    <string name="ea_resources">Recursos de EA</string>
    <string name="confirm">Sim</string>
    <string name="configuracoes">Configurações</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="mentor">Mentor</string>
    <string name="sair">Sair</string>
    <string name="login_with_fingerprint">Login com biometria</string>
    <string name="welcome_message">Bem-vindo!</string>
    <string name="aguardam_sessao_zero">Sessão zero</string>
    <string name="inicio_de_ronda">Ronda/Ciclo</string>
    <string name="sessao_semestral">Semestral</string>
    <string name="todos">Todos</string>
</resources>