<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mz.org.csaude.mentoring.view.home.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="mz.org.csaude.mentoring.view.home.ui.settings.SettingsFragment"
        android:label="@string/configuracoes"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_personal_info"
        android:name="mz.org.csaude.mentoring.view.home.ui.personalinfo.PersonalInfoFragment"
        android:label="@string/meus_dados"
        tools:layout="@layout/fragment_mentor_info" />

    <fragment
        android:id="@+id/nav_credentials"
        android:name="mz.org.csaude.mentoring.view.home.ui.credentials.CredentialsFragment"
        android:label="@string/mentor"
        tools:layout="@layout/fragment_credentials" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="mz.org.csaude.mentoring.view.home.ui.logout.LogoutFragment"
        android:label="@string/sair"
        tools:layout="@layout/fragment_logout" />
</navigation>
