<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="mz.org.csaude.mentoring.viewmodel.login.LoginVM" />

        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dimen_30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginStart="@dimen/dimen_25dp"
                android:background="@drawable/login_banner"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="bottom|center"
                    app:srcCompat="@drawable/mentoring" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    style="@style/login_app_name_style"
                    android:paddingStart="@dimen/dimen_15dp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/app_name"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_18dp"
            android:paddingRight="@dimen/dimen_18dp"
            android:layout_weight="2.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/login_text_style"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/inUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_person"
                app:startIconTint="@color/colorPrimaryDark"
                android:inputType="text"
                android:padding="8dp"
                android:text="@={viewModel.userName}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/login_text_style"
                android:text="@string/password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_lock"
                app:passwordToggleEnabled="true"
                app:startIconTint="@color/colorPrimaryDark"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/inPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:text="@={viewModel.userPassword}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbx_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:checked="@{viewModel.remeberMe}"
                android:onClick="@{() -> viewModel.changeRemeberMeStatus()}"
                android:text="@string/remember_me"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape"
                    android:padding="@dimen/dimen_4dp"
                    android:onClick="@{()-> viewModel.doLogin()}"
                    android:text="@string/login"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:visibility="@{!viewModel.authenticating ? View.VISIBLE : View.GONE}"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <ImageButton
                    android:id="@+id/btn_biometric_login"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/button"
                    android:layout_marginTop="50dp"
                    android:onClick="@{()-> viewModel.showBiometricPrompt()}"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/login_with_fingerprint"
                    android:src="@drawable/ic_fingerprint"
                    android:scaleType="centerInside"
                    android:visibility="@{viewModel.biometricEnabled ? View.VISIBLE : View.GONE}" />

                <LinearLayout
                    android:id="@+id/login_progress_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="@{viewModel.authenticating ? View.VISIBLE : View.GONE}">

                    <ProgressBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:padding="@dimen/dimen_10dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:gravity="left"
                        android:text="@string/authenticating"
                        android:textColor="@color/logo"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="@dimen/dimen_20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@{viewModel.appName}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@{viewModel.appVersionName}"/>
        </LinearLayout>

    </LinearLayout>
</layout>
